sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:14: error: not found: value échangé
		if (échangé == false) {return}
                    ^